--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MyTrips</string>
+    <string name="toolbar_trips">Trips</string>
+    <string name="toolbar_trip_details">Trip Details</string>
 </resources>
