--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="trip_details_short">From %1$s to %2$s</string>
     <string name="trip_details_start">Start: %s</string>
     <string name="trip_details_end">End: %s</string>
+    <string name="loading">Loading…</string>
 </resources>
